@@ -1000,15 +1000,6 @@ NEARDATA struct permonst mons[] = {
 	M1_FLY|M1_BREATHLESS|M1_NOEYES|M1_NOLIMBS|M1_NOHEAD|M1_MINDLESS|
 	  M1_UNSOLID,
 	M2_HOSTILE|M2_NEUTER, M3_INFRAVISIBLE, CLR_YELLOW),
-    MON("anti-matter vortex", S_VORTEX,
-	LVL(15, 18, 0, 30, 0), (G_HELL|G_GENO|G_NOGEN|G_NOCORPSE|1),
-	A(ATTK(AT_ENGL, AD_DISN, 1,10), NO_ATTK,
-	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
-	SIZ(0, 0, 0, MS_SILENT, MZ_HUGE),
-	MR_ELEC|MR_FIRE|MR_COLD|MR_SLEEP|MR_DISINT|MR_POISON|MR_STONE, 0,
-	M1_FLY|M1_BREATHLESS|M1_NOEYES|M1_NOLIMBS|M1_NOHEAD|M1_MINDLESS|
-	  M1_UNSOLID,
-	M2_HOSTILE|M2_NEUTER, 0, CLR_BRIGHT_GREEN),
 
 /*
  * worms
