@@ -2199,25 +2199,6 @@ P = (108, 145, 182)
   MMMMDDDDMMDMMMMM
   MMMMMMMMMMMMMMMM
 }
-# tile 113 (anti-matter vortex)
-{
-  MMMMMMMMMMMMMMMM
-  MMMMMMMMMMMMMMMM
-  MMMMPMMPPPPMMMMM
-  MMMPMMPPAAAPMMMM
-  MMPMMPAAAAMMPMMM
-  MPAMPAAPAPPMMPMM
-  MPAAPAPAAAAPMMMM
-  MPAAAAPMPPAAPMMM
-  MPPAPAMMMAPAPPMM
-  MMPAAPPMPAAAAPMM
-  MMMPAAAAPAPAAPMM
-  MPMMPPAPAAPMAPMM
-  MMPMMAAAAPMMPMMM
-  MMMPAAAPPMMPMMMM
-  MMMMPPPPMMPMMMMM
-  MMMMMMMMMMMMMMMM
-}
 # tile 113 (baby long worm)
 {
   MMMMMMMMMMMMMMMM
